# nes-chiptune-maker

./: .gitignore  README.md  constraints.txt  pyproject.toml
assets/: test_theme.mid
config/: nes.toml
scripts/: make_test_midi.py
src/chiptune/: cli.py  config.py  invariants.py  midi_io.py  quantize.py  score.py
src/chiptune/analysis/: __init__.py  build_score.py  chords.py  density.py  drums.py  metrics.py  separate.py  tempo.py  transcribe.py  vocals.py
src/chiptune/arrange/: ai_arranger.py  allocator.py  arpeggio.py  chord_comp.py  (+8 more)
tests/: test_ai_arranger.py  test_allocator.py  test_apu.py  test_arpeggio.py  test_build_score_harmony.py  test_chord_comp.py  test_comp_select.py  test_config.py  test_e2e.py  test_invariants.py  test_midi_io.py  test_mixer.py  test_monophony.py  test_nes_tables.py  test_noise.py  test_notation.py  test_percussion.py  test_phantom_echo.py  test_pulse.py  test_quantize.py  test_rearticulate.py  test_score.py  test_sparse.py  test_stack_smoke.py  test_triangle.py
tests/analysis/: test_build_score.py  test_chords.py  test_convert_e2e.py  test_density.py  test_drums.py  test_metrics.py  test_separate.py  test_separate_cache.py  test_tempo.py  test_transcribe.py  test_vocals.py
tests/web/: test_runtime.py
web-demo/: CREDITS.md  app.py  nes.toml  pyproject.toml  requirements.txt
web-demo/chiptune/: config.py  invariants.py  quantize.py
web-demo/scores/: acoustic-ai.json  acoustic-chords.json  breakbeat-ai.json  breakbeat-chords.json  crazyglue-chords.json  feldman-chords.json  jazz-ai.json  jazz-chords.json  lullaby-chords.json  molihua-chords.json  pop-chords.json  pop-transcribe.json  rock-ai.json  rock-chords.json  saboteurs-chords.json  songbie-chords.json  soul-ai.json  soul-chords.json  synth-ai.json  synth-chords.json  topone-chords.json
web-demo/static/: compare.html  index.html
(+14 files in other folders)
