[build-system]
requires = ["setuptools>=68,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chiptune-maker"
version = "0.1.0"
description = "Convert songs into NES 2A03-constrained chiptune covers"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "soundfile>=0.12",
    "pretty-midi>=0.2.10",
    "mido>=1.3",
]

[project.optional-dependencies]
analysis = [
    "demucs==4.1.0",
    "basic-pitch==0.4.0",
    "librosa>=0.11",
    "torch>=2.1",
]
dev = ["pytest>=7.0"]

[project.scripts]
chiptune = "chiptune.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: tests that load ML models (deselect with '-m \"not slow\"')"]
